Updated section names; removed scrollmagic debug

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 1    -->
-    <!--    /////////    -->
+    <!--    //////////////////////////    -->
+    <!--    SECTION 1 — MAP + WAVEFORM    -->
+    <!--    //////////////////////////    -->
     <div class="text-section" id="section-1">
         <div class="container">
             <div class="flex-text">
@@ -2404,9 +2404,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 2    -->
-    <!--    /////////    -->
+    <!--    //////////////////////////////////    -->
+    <!--    SECTION 2 — HATE SPEECH ON SOCIALS    -->
+    <!--    //////////////////////////////////    -->
 
     <div class="section-wrapper">
         <div class="section-container col-1">
@@ -2447,9 +2447,9 @@
         </div>
     </div> -->
 
-    <!--    /////////    -->
-    <!--    SECTION 3    -->
-    <!--    /////////    -->
+    <!--    ///////////////////////////    -->
+    <!--    SECTION 3 — CODE OF CONDUCT    -->
+    <!--    ///////////////////////////    -->
     <div class="text-section" id="section-3">
         <div class="container">
             <div class="flex-text">
@@ -3377,9 +3377,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 4    -->
-    <!--    /////////    -->
+    <!--    ////////////////////////////////////    -->
+    <!--    SECTION 4 — SOCIAL NETWORKS POLICIES    -->
+    <!--    ////////////////////////////////////    -->
     <div class="text-section dark" id="section-4" style="display: block; height: 90vh;">
         <div class="container" style="display: block;">
             <div class="flex-text" style="justify-content: flex-start; max-width: 860px; margin: 0 auto; margin-top: calc(var(--spacing) * 2);">
@@ -3410,9 +3410,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 5    -->
-    <!--    /////////    -->
+    <!--    //////////////////////    -->
+    <!--    SECTION 5 — LA LETTURA    -->
+    <!--    //////////////////////    -->
     <div class="text-section" id="section-5">
         <div class="container">
             <div class="flex-text">
@@ -3433,9 +3433,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 6    -->
-    <!--    /////////    -->
+    <!--    /////////////////////////    -->
+    <!--    SECTION 6 — DELETED RATIO    -->
+    <!--    /////////////////////////    -->
     <div class="text-section" id="section-6">
         <div class="container">
             <div class="flex-text">
@@ -3456,9 +3456,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 7    -->
-    <!--    /////////    -->
+    <!--    //////////////////////////////    -->
+    <!--    SECTION 7 — HATEFUL CATEGORIES    -->
+    <!--    //////////////////////////////    -->
     <div class="text-section dark" id="section-7">
         <div class="container">
             <div class="flex-text">
@@ -3477,9 +3477,9 @@
         </div>
     </div>
 
-    <!--    /////////    -->
-    <!--    SECTION 8    -->
-    <!--    /////////    -->
+    <!--    //////////////////////////    -->
+    <!--    SECTION 8 — HATEBASE WORDS    -->
+    <!--    //////////////////////////    -->
     <div class="text-section dark" id="section-8">
         <div class="container">
             <div class="flex-text">
@@ -3495,20 +3495,20 @@
                 </p>
             </div>
             <div class="graph-container">
-                <!-- TIMELINE GOES DOWN HERE -->
+                <!-- HATEBASE GOES DOWN HERE -->
                 <div class="undefined-graph" style="height: 500px;"></div>
-                <!-- TIMELINE GOES UPPP HERE -->
+                <!-- HATEBASE GOES UPPP HERE -->
             </div>
         </div>
     </div>
 
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js" onload="console.log(this.href)"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js" onload="console.log(this.href)"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js" onload="console.log(this.href)"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js" onload="console.log(this.href)"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js" onload="console.log(this.href)"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script> -->
 <script type="text/javascript" src="src/main.js"></script>
+
 </html>
