--- a/index.html
+++ b/index.html
@@ -2536,7 +2536,7 @@
                         }
 
                         .st11 {
-                            font-family: 'IBM Plex Mono';
+                            <!-- font-family: 'IBM Plex Mono'; -->
                         }
 
                         .st12 {
