categories graph -done (fix)

--- a/categories_graph.html
+++ b/categories_graph.html
@@ -17,9 +17,9 @@
             <text transform="matrix(1 0 0 1 504.481 576.2192)" class="testi social social-all twitter" id="twitter">Twitter</text>
             <text transform="matrix(1 0 0 1 493.7163 491.1265)" class="testi social social-all facebook" id="facebook">Facebook</text>
             <text transform="matrix(1 0 0 1 504.481 661.312)" class="testi social social-all youtube" id="youtube">YouTube</text>
-            <circle class="st3" cx="616.5" cy="487.8" r="5" />
-            <circle class="st4" cx="616.5" cy="572.9" r="5" />
-            <circle class="st5" cx="616.5" cy="658" r="5" />
+            <circle class="fb-ball" cx="616.5" cy="487.8" r="5" />
+            <circle class="tw-ball" cx="616.5" cy="572.9" r="5" />
+            <circle class="yt-ball" cx="616.5" cy="658" r="5" />
         </g>
         <g id="Testi-Parole">
             <text transform="matrix(1 0 0 1 1225.1851 545.5879)" class="testi category-words social-all nation-or facebook twitter">Nation origin</text>
@@ -35,19 +35,19 @@
             <text transform="matrix(1 0 0 1 1225.1851 741.8276)" class="testi category-words social-all serious-dis facebook twitter">Serious Disaease</text>
             <text transform="matrix(1 0 0 1 1225.1851 938.0679)" class="testi category-words social-all veteran youtube">Veteran status</text>
             <text transform="matrix(1 0 0 1 1229.689 153.1079)" class="testi category-words social-all age youtube twitter">Age</text>
-            <circle class="st6 category-words social-all casta facebook" cx="1209.5" cy="213.2" r="5" />
-            <circle class="st6 category-words social-all age youtube twitter" cx="1209.5" cy="148.2" r="5" />
-            <circle class="st6 category-words social-all disability facebook youtube twitter" cx="1209.5" cy="278.6" r="5" />
-            <circle class="st6 category-words social-all ethnicity facebook youtube twitter" cx="1209.5" cy="344" r="5" />
-            <circle class="st6 category-words social-all gender facebook youtube twitter" cx="1209.5" cy="409.4" r="5" />
-            <circle class="st6 category-words social-all gender-id facebook youtube twitter" cx="1209.5" cy="474.8" r="5" />
-            <circle class="st6 category-words social-all nation-or facebook twitter" cx="1209.5" cy="540.2" r="5" />
-            <circle class="st6 category-words social-all race facebook youtube twitter" cx="1209.5" cy="605.6" r="5" />
-            <circle class="st6 category-words social-all religion facebook youtube twitter" cx="1209.5" cy="671" r="5" />
-            <circle class="st6 category-words social-all serious-dis facebook twitter" cx="1209.5" cy="736.5" r="5" />
-            <circle class="st6 category-words social-all sexual facebook youtube twitter" cx="1209.5" cy="801.9" r="5" />
-            <circle class="st6 category-words social-all sex facebook" cx="1209.5" cy="867.3" r="5" />
-            <circle class="st6 category-words social-all veteran youtube" cx="1209.5" cy="932.7" r="5" />
+            <circle class="w-ball category-words social-all casta facebook" cx="1209.5" cy="213.2" r="5" />
+            <circle class="w-ball category-words social-all age youtube twitter" cx="1209.5" cy="148.2" r="5" />
+            <circle class="w-ball category-words social-all disability facebook youtube twitter" cx="1209.5" cy="278.6" r="5" />
+            <circle class="w-ball category-words social-all ethnicity facebook youtube twitter" cx="1209.5" cy="344" r="5" />
+            <circle class="w-ball category-words social-all gender facebook youtube twitter" cx="1209.5" cy="409.4" r="5" />
+            <circle class="w-ball category-words social-all gender-id facebook youtube twitter" cx="1209.5" cy="474.8" r="5" />
+            <circle class="w-ball category-words social-all nation-or facebook twitter" cx="1209.5" cy="540.2" r="5" />
+            <circle class="w-ball category-words social-all race facebook youtube twitter" cx="1209.5" cy="605.6" r="5" />
+            <circle class="w-ball category-words social-all religion facebook youtube twitter" cx="1209.5" cy="671" r="5" />
+            <circle class="w-ball category-words social-all serious-dis facebook twitter" cx="1209.5" cy="736.5" r="5" />
+            <circle class="w-ball category-words social-all sexual facebook youtube twitter" cx="1209.5" cy="801.9" r="5" />
+            <circle class="w-ball category-words social-all sex facebook" cx="1209.5" cy="867.3" r="5" />
+            <circle class="w-ball category-words social-all veteran youtube" cx="1209.5" cy="932.7" r="5" />
         </g>
         <g id="Linee-FB">
             <path class="fb-paths all-paths facebook social-all casta" d="M1209.5,213.2c-346,0-346,274.7-593.2,274.7" />
