--- a/percentage_graph.html
+++ b/percentage_graph.html
@@ -42,11 +42,11 @@
         </g>
 
         <g id="social-labels">
-            <rect id="fb-box" class="labels social-label" x="197.9" y="532.2" width="193.7" height="52.1" />
+            <rect id="fb-box" class="labels fb-label social-label" x="197.9" y="532.2" width="193.7" height="52.1" />
             <text id="fb-text" class="labels fb-label social-label white-el percentages-font" transform="matrix(1 0 0 1 246.7727 564.2681)">Facebook</text>
-            <rect id="tw-box" class="labels social-label" x="197.9" y="606" width="193.7" height="52.1" />
+            <rect id="tw-box" class="labels tw-label social-label" x="197.9" y="606" width="193.7" height="52.1" />
             <text id="tw-text" class="labels tw-label social-label white-el percentages-font" transform="matrix(1 0 0 1 252.7727 638.0273)">Twitter</text>
-            <rect id="yt-box" class="labels social-label" x="197.9" y="679.7" width="193.7" height="52.1" />
+            <rect id="yt-box" class="labels yt-label social-label" x="197.9" y="679.7" width="193.7" height="52.1" />
             <text id="yt-text" class="labels yt-label social-label white-el percentages-font" transform="matrix(1 0 0 1 252.7727 711.7871)">YouTube</text>
         </g>
 
