--- a/filtering_graph.html
+++ b/filtering_graph.html
@@ -139,8 +139,7 @@
                         c-25.7,0-80.6,51.4-80.6,51.4s-21-129.8-79.8-129.8C683.4,248.1,662.3,378.5,662.3,378.5z" />
                     </g>
                 </g>
-                <text transform="matrix(1 0 0 1 376.2915 377.7125)" class="text-general country-text ">Czech Republic —
-                    53%</text>
+                <text transform="matrix(1 0 0 1 376.2915 377.7125)" class="text-general country-text ">Czech Republic — 53%</text>
             </g>
             <g id="Bulgaria" class="graph-curve">
                 <g class="encounter-graph-mountains">
@@ -414,8 +413,7 @@
                         s-21-178.1-79.8-178.2C587.1,394.6,566,573.4,566,573.4z" />
                     </g>
                 </g>
-                <text transform="matrix(1 0 0 1 308.9878 572.8091)" class="text-general country-text ">Netherlands —
-                    34%</text>
+                <text transform="matrix(1 0 0 1 308.9878 572.8091)" class="text-general country-text ">Netherlands — 34%</text>
             </g>
             <g id="Slovenia" class="graph-curve">
                 <g class="encounter-graph-mountains">
@@ -577,8 +575,7 @@
                         C529.3,530.5,508.2,690.3,508.2,690.3z" />
                     </g>
                 </g>
-                <text transform="matrix(1 0 0 1 224.4604 689.8673)" class="text-general country-text ">United Kingdom —
-                    28%</text>
+                <text transform="matrix(1 0 0 1 224.4604 689.8673)" class="text-general country-text ">United Kingdom — 28%</text>
             </g>
             <g id="France" class="graph-curve">
                 <g class="encounter-graph-mountains">
@@ -853,6 +850,38 @@
                 </g>
                 <text transform="matrix(1 0 0 1 197.604 884.9644)" class="text-general country-text ">Estonia — 15%</text>
             </g>
+
+            <style type="text/css">
+                .st0{fill:#FFFFFF;stroke:#0033FF;stroke-miterlimit:10;}
+                .st1{fill:#0033FF;}
+                .st2{font-family:'IBMPlexMono';}
+                .st3{font-size:14px;}
+            </style>
+            <g id="estonia-perc">
+                <rect x="471.8" y="677.9" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 479.5819 693.2206)" class="st1 st2 st3">50%</text>
+                <rect x="632" y="796.5" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 639.7577 811.8188)" class="st1 st2 st3">15%</text>
+                <rect x="792.6" y="829.4" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 804.5004 844.6904)" class="st1 st2 st3">5%</text>
+                <rect x="952.6" y="838.5" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 964.5004 853.8002)" class="st1 st2 st3">2%</text>
+                <rect x="1112.8" y="755" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 1120.4907 770.3002)" class="st1 st2 st3">27%</text>
+            </g>
+            <g id="italy-perc">
+                <rect x="481.3" y="669.4" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 489.0707 684.7026)" class="st1 st2 st3">47%</text>
+                <rect x="641.6" y="769.3" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 649.3106 784.6086)" class="st1 st2 st3">17%</text>
+                <rect x="801.8" y="807.7" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 813.7503 822.9935)" class="st1 st2 st3">6%</text>
+                <rect x="961.7" y="820" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 973.6 835.3625)" class="st1 st2 st3">2%</text>
+                <rect x="1122.3" y="733.3" class="st0" width="40.7" height="20.5"/>
+                <text transform="matrix(1 0 0 1 1130.0671 748.6034)" class="st1 st2 st3">28%</text>
+            </g>
+
         </svg>
     </div>
 
