--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </div>
         <div class="hero">
                 <div class="hero-caption">
-                        <h1 class="title">404<br>Hate&nbsp;not&nbsp;found.</h1>
-                        <h1><span class="highlighted">
+                        <h1 class="title">404 Hate&nbsp;not&nbsp;found.</h1>
+                        <h2><span class="highlighted">
                                         Filtering online hate speech<br>
                                         on social networks in Europe.</span>
-                        </h1>
+                        </h2>
                 </div>
         </div>
 
@@ -2399,7 +2399,7 @@
                 <div id="main-question">
                         <div id="waveform">
                                 <svg id="wave" class="hide" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                                        xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-5 0 200 200"
+                                        xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-5 0 200 200"
                                         xml:space="preserve">
                                         <style type="text/css">
                                                 :root {
@@ -2414,7 +2414,7 @@
                                                 line {
                                                         fill: none;
                                                         stroke: var(--c-3);
-                                                        stroke-width: 2;
+                                                        stroke-width: 1;
                                                         stroke-miterlimit: 10;
                                                         stroke-linecap: round;
                                                 }
@@ -3392,9 +3392,6 @@
                                                         establishment has done 3 surveys and has published them in
                                                         order to understand how IT Companies react to notifications of
                                                         illegal hate speech.
-                                                        <!-- /////////////// TO-DO /////////////// -->
-                                                        <!-- Fai tooltip che mostra la definizione -->
-                                                        <!-- ///////////////////////////////////// -->
                                                 </p>
                                         </div>
                                         <div class="graph-container" id="graph-scroller-timeline" style="position: relative;">
@@ -4412,7 +4409,8 @@
         <div class="narrative-section dark" style="display: block; height: 90vh;">
                 <div class="section-heading" id="section-policies">
                         <div class="section-title" id="section-4">
-                                <h1>What&nbsp;are&nbsp;they filtering&nbsp;for?</h1>
+                                <h2 style="color: var(--c-1); background-color: transparent; border: none;
+                                font-family: 'IBM Plex Serif'; font-size: 2rem;">What&nbsp;are&nbsp;they filtering&nbsp;for?</h2 style="color: var(--c-1); background-color: var(--c-1); border: none;">
                         </div>
                         <div id="sns" style="color: var(--c-1);">
                                 <div>
@@ -4482,7 +4480,7 @@
                                         social networks adhering to the Code of Conduct during the survey period.</p>
                         </div>
                 </div>
-                <div class="graph-container" style="max-width: 860px; margin: 0 auto; display: block;">
+                <div class="graph-container" style="max-width: calc(var(--max-width) / 1.3); margin: 0 auto; display: block;">
                         <object type="image/svg+xml" data="src/SVGs/lettura.svg">
                                 Your browser does not support SVG
                         </object>
@@ -4513,7 +4511,7 @@
                         <?xml version="1.0" encoding="utf-8"?>
                         <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                         <svg id="bar_chart" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                viewBox="150 400 1600 800">
+                                viewBox="150 400 1600 800" style="max-width: 85vw;">
                                 <g id="social-labels-arrows">
                                         <g class="graph-section-fb">
                                                 <!-- <g>
@@ -4752,7 +4750,7 @@
                         <?xml version="1.0" encoding="utf-8"?>
                         <!-- Generator: Adobe Illustrator 22.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                x="0px" y="0px" viewBox="650 100 600 900" style="max-height: 75vh;" xml:space="preserve">
+                                viewBox="650 100 600 900" style="max-height: 75vh;" xml:space="preserve">
                                 <g id="Testi-Social">
                                         <text transform="matrix(1 0 0 1 504.481 576.2192)" class="testi social social-all twitter"
                                                 id="twitter">Twitter</text>
@@ -4862,8 +4860,7 @@
                         <?xml version="1.0" encoding="utf-8"?>
                         <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                x="0px" y="0px" viewBox="650 20 600 1000" style="enable-background:new 0 0 1920 1080;"
-                                xml:space="preserve">
+                                viewBox="650 150 600 780" style="max-height: 75vh;" xml:space="preserve">
                                 <g id="3rd-monitoring">
                                         <path class="stroke stroke0 3rd" d="M711.6,279.4c259.4,0,259.4,385.3,518.8,385.3" />
                                         <path class="stroke stroke1 3rd" d="M711.6,380.6C971,380.6,971,690,1230.4,690" />
