--- a/hatebase_names.html
+++ b/hatebase_names.html
@@ -22,12 +22,12 @@
 
             <span class="dot" data-name="Diaper Head" data-category="Ethnicity" data-offensiveness=17 data-description="An Arab, Indian Sikh or other individual of Middle Eastern or South Asian descent wearing traditional headdress such as turbans or keffiyehs. Sometimes used generically for all Islamic nations."></span>
             <span class="dot" data-name="Frog" data-category="Ethnicity" data-offensiveness=7 data-description="A French person. Prior to 19th century, referred to the Dutch (as they were stereotyped as being marsh-dwellers). When France became Britain's main enemy, replacing the Dutch, the epithet transferred to them, due to the French recipe for eating frogs' legs (see comparable French term Rosbif). Also used in Canada to refer to both the French and French Canadians"></span>
-            <span class="dot" data-name="Yokel" data-category="Ethnicity" data-offensiveness=9 data-description="A rural person."></span>
+            <span class="dot" data-name="Yokel" data-category="Ethnicity" data-offensiveness=9 data-description="A rural person"></span>
             <span class="dot" data-name="Zebra" data-category="Ethnicity" data-offensiveness=24 data-description="A person of mixed Caucasian and black parentage"></span>
-            <span class="dot" data-name="Pussy" data-category="Gender" data-offensiveness=14 data-description="[1] Pejorative word for female. <br> [2] Pejorative word for male, meaning meek or cowardly."></span>
+            <span class="dot" data-name="Pussy" data-category="Gender" data-offensiveness=14 data-description="[1] Pejorative word for female. <br> [2] Pejorative word for male, meaning meek or cowardly"></span>
             <span class="dot" data-name="Anchor Baby" data-category="Ethnicity" data-offensiveness=40 data-description="A child of illegal immigrants, particularly in the United States, from the notion of dropping an anchor for other family members to acquire citizenship"></span>
-            <span class="dot" data-name="Jewbacca" data-category="Ethnicity" data-offensiveness=33 data-description="A disabled person"></span>
-            <span class="dot" data-name="Cripple" data-category="Disability" data-offensiveness=26 data-description="A hairy person of Jewish ancestry, from the Star Wars character, Chewbacca."></span>
+            <span class="dot" data-name="Jewbacca" data-category="Ethnicity" data-offensiveness=33 data-description="A hairy person of Jewish ancestry, from the Star Wars character, Chewbacca"></span>
+            <span class="dot" data-name="Cripple" data-category="Disability" data-offensiveness=26 data-description="A disabled person"></span>
             <span class="dot" data-name="Zionazi" data-category="Nationality, Religion" data-offensiveness=47
                 data-description="A Jew living in Israel"></span>
             <span class="dot" data-name="Pinto" data-category="Ethnicity" data-offensiveness=37 data-description="One who has both a Caucasian parent and a Native American parent"></span>
@@ -42,10 +42,10 @@
             <span class="dot" data-name="Wigga" data-category="Ethnicity, Nationality" data-offensiveness=82
                 data-description="[1] Used in 19th-century United States to refer to the Irish <br> [2] Sometimes used today in reference to white people in a manner similar to white trash or redneck <br> [3] Also refers to white youth that imitate urban black youth by means of clothing style, mannerisms, and slang speech. The 'w' at the start of wigger refers to the white person and the 'igger' refers to nigger, which is a racial slur for black people."></span>
             <span class="dot" data-name="Slope" data-category="Ethnicity" data-offensiveness=82 data-description="A person of Asian descent, particularly Vietnamese or Chinese"></span>
-            <!-- <span class="dot" data-name="Niglet" data-category="Ethnicity" data-offensiveness=85 data-description="A black child"></span>
-                <span class="dot" data-name="Ginzo" data-category="Ethnicity, Nationality" data-offensiveness=96
-                    data-description="A person of Italian birth or descent. Most likely derived from 'Guinea Negro,' implying that Italians are dark or swarthy-skinned like the natives of Guinea. The diminutive 'Ginzo' probably dates back to World War II and is derived from Australian slang"></span> -->
-
+            <span class="dot" data-name="Niglet" data-category="Ethnicity" data-offensiveness=85 data-description="A black child"></span>
+            <span class="dot" data-name="Ginzo" data-category="Ethnicity, Nationality" data-offensiveness=96
+                data-description="A person of Italian birth or descent. Most likely derived from 'Guinea Negro,' implying that Italians are dark or swarthy-skinned like the natives of Guinea. The diminutive 'Ginzo' probably dates back to World War II and is derived from Australian slang"></span>
+            <span class="dot" data-name="Soup Taker " data-category="Nationality, Religion" data-offensiveness=43 data-description="A person who has sold out their beliefs, referring to the Irish Potato famine when some Catholics converted to a Protestant faith in order to gain access to a free meal"></span>
         </div>
     </div>
 </body>
