--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div class="hero-caption">
                         <h1 class="title">404 Hate&nbsp;not&nbsp;found.</h1>
                         <h2>
-                                <span class="highlighted">      Filtering online hate speech<br> 
-                                                                on social networks in Europe.</span>
-                        </h2>                
+                                <span class="highlighted"> Filtering online hate speech<br>
+                                        on social networks in Europe.</span>
+                        </h2>
                 </div>
                 <div id="lottie-hero"></div>
                 <script type="text/javascript" src="src/bodymovin-assets/lottie.js"></script>
@@ -2634,7 +2634,7 @@
                                                 </g>
                                                 <text transform="matrix(1 0 0 1 376.2915 377.7125)" class="text-general country-text ">Czech
                                                         Republic — 53%</text>
-                                                <<<<<<< HEAD <g id="czech-republic-perc" class="perc-labels">
+                                                <g id="czech-republic-perc" class="perc-labels">
                                                         <rect x="722.2" y="208.4" class="encounter-perc" width="40.7"
                                                                 height="20.5" />
                                                         <text transform="matrix(1 0 0 1 729.9406 223.7354)" class="perc-text text-general">39%</text>
@@ -4890,11 +4890,6 @@
                                                         </svg>
 
                                                 </div>
-                                                <script type="text/javascript">
-                                                // 
-                                                //---------TOOLTIPS PER TIMELINE + CODE OF CONDUCT
-                                                // 
-                                                </script>
                                                 <style>
                                                         #info-tooltip {
                                                                 opacity: 0;
@@ -5533,17 +5528,17 @@
                                 <span class="dot" data-name="Frog" data-category="Ethnicity" data-offensiveness=7
                                         data-description="A French person. Prior to 19th century, referred to the Dutch (as they were stereotyped as being marsh-dwellers). When France became Britain's main enemy, replacing the Dutch, the epithet transferred to them, due to the French recipe for eating frogs' legs (see comparable French term Rosbif). Also used in Canada to refer to both the French and French Canadians"></span>
                                 <span class="dot" data-name="Yokel" data-category="Ethnicity" data-offensiveness=9
-                                        data-description="A rural person."></span>
+                                        data-description="A rural person"></span>
                                 <span class="dot" data-name="Zebra" data-category="Ethnicity" data-offensiveness=24
                                         data-description="A person of mixed Caucasian and black parentage"></span>
                                 <span class="dot" data-name="Pussy" data-category="Gender" data-offensiveness=14
-                                        data-description="[1] Pejorative word for female. <br> [2] Pejorative word for male, meaning meek or cowardly."></span>
+                                        data-description="[1] Pejorative word for female. <br> [2] Pejorative word for male, meaning meek or cowardly"></span>
                                 <span class="dot" data-name="Anchor Baby" data-category="Ethnicity" data-offensiveness=40
                                         data-description="A child of illegal immigrants, particularly in the United States, from the notion of dropping an anchor for other family members to acquire citizenship"></span>
                                 <span class="dot" data-name="Jewbacca" data-category="Ethnicity" data-offensiveness=33
-                                        data-description="A disabled person"></span>
+                                        data-description="A hairy person of Jewish ancestry, from the Star Wars character, Chewbacca"></span>
                                 <span class="dot" data-name="Cripple" data-category="Disability" data-offensiveness=26
-                                        data-description="A hairy person of Jewish ancestry, from the Star Wars character, Chewbacca."></span>
+                                        data-description="A disabled person"></span>
                                 <span class="dot" data-name="Zionazi" data-category="Nationality, Religion"
                                         data-offensiveness=47 data-description="A Jew living in Israel"></span>
                                 <span class="dot" data-name="Pinto" data-category="Ethnicity" data-offensiveness=37
@@ -5568,6 +5563,8 @@
                                         data-description="A black child"></span>
                                 <span class="dot" data-name="Ginzo" data-category="Ethnicity, Nationality"
                                         data-offensiveness=96 data-description="A person of Italian birth or descent. Most likely derived from 'Guinea Negro,' implying that Italians are dark or swarthy-skinned like the natives of Guinea. The diminutive 'Ginzo' probably dates back to World War II and is derived from Australian slang"></span>
+                                <span class="dot" data-name="Soup Taker" data-category="Nationality, Religion"
+                                        data-offensiveness=43 data-description="A person who has sold out their beliefs, referring to the Irish Potato famine when some Catholics converted to a Protestant faith in order to gain access to a free meal"></span>
                         </div>
                 </div>
                 <div class="source-container">
