Fixed typos; new SNS style

--- a/index.html
+++ b/index.html
@@ -2493,7 +2493,7 @@
                                 <?xml version="1.0" encoding="utf-8"?>
                                 <!-- Generator: Adobe Illustrator 22.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                        x="0px" y="0px" viewBox="600 200 600 800" style="enable-background:new 0 0 1920 1080;"
+                                        x="0px" y="0px" viewBox="600 150 600 800" style="enable-background:new 0 0 1920 1080;"
                                         xml:space="preserve">
                                         <g id="RunHS" class="higher">
                                                 <rect x="1527.9" y="357.5" class="encounter-blue-line" width="116.1"
@@ -4944,10 +4944,10 @@
                         </div>
                         <div id="sns" style="color: var(--c-1);">
                                 <div>
-                                        <h3>Twitter</h3>
-                                        <p>We do not tolerate behavior that harasses, intimidates, or uses fear to
+                                        <h2 style="color: var(--c-1); display: inline-block; background-color: var(--c-2); border: solid 2px var(--c-1);">Twitter</h2>
+                                        <p>"We do not tolerate behavior that harasses, intimidates, or uses fear to
                                                 silence another person’s voice. If you see something on Twitter that
-                                                violates these rules, please report it to us.</p>
+                                                violates these rules, please report it to us."</p>
                                         <div class="source-container">
                                                 <div class="source-text dark">
                                                         <a href="https://help.twitter.com/en/rules-and-policies/hateful-conduct-policy"
@@ -4956,9 +4956,9 @@
                                         </div>
                                 </div>
                                 <div>
-                                        <h3>Facebook</h3>
-                                        <p>Hate Speech is not allowed on Facebook because it causes intimidation,
-                                                exclusion and in some cases it can generate actual violence.</p>
+                                        <h2 style="color: var(--c-1); display: inline-block; background-color: var(--c-2); border: solid 2px var(--c-1);">Facebook</h2>
+                                        <p>"Hate Speech is not allowed on Facebook because it causes intimidation,
+                                                exclusion and in some cases it can generate actual&nbsp;violence."</p>
                                         <div class="source-container">
                                                 <div class="source-text dark">
                                                         <a href="https://www.facebook.com/communitystandards/hate_speech"
@@ -4967,10 +4967,10 @@
                                         </div>
                                 </div>
                                 <div>
-                                        <h3>YouTube</h3>
-                                        <p>We encourage free speech and try to defend your right to express unpopular
+                                        <h2 style="color: var(--c-1); display: inline-block; background-color: var(--c-2); border: solid 2px var(--c-1);">YouTube</h2>
+                                        <p>"We encourage free speech and try to defend your right to express unpopular
                                                 points of view, but we don't permit hate speech. There is a fine line
-                                                between what is and what is not considered to be hate speech.</p>
+                                                between what is and what is not considered to be hate speech."</p>
                                         <div class="source-container">
                                                 <div class="source-text dark">
                                                         <a href="https://support.google.com/youtube/answer/2801939?hl=en"
