--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <meta name="keywords" content="Hate, Online, Speech, Europe, Social, Networks, Dataviz, Data, Visualization, Density, Design">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="apple-touch-icon" sizes="180x180" href="src/favicon_package_v0.16/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="src/favicon_package_v0.16/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="src/favicon_package_v0.16/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2000ff">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
         <!-- fogli di stile del footer -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
                 integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -39,10 +47,8 @@
         <div class="hero" style="overflow: hidden; height: 150%">
                 <div class="hero-caption">
                         <h1 class="title">404 Hate&nbsp;not&nbsp;found.</h1>
-                        <h2>
-                                <span class="highlighted"> Filtering online hate speech<br>
-                                        on social networks in Europe.</span>
-                        </h2>
+                        <h2><span class="highlighted" style="line-height: 1.3; /* padding: 0 calc(var(--spacing) / 3); display: inline-block; */"> Filtering online hate speech<br>
+                                on social networks in Europe.</span></h2>
                 </div>
                 <div id="lottie-hero"></div>
                 <script type="text/javascript" src="src/bodymovin-assets/lottie.js"></script>
@@ -5586,13 +5592,12 @@
                                 <div class="col-xs-12 col-sm-12 offset-xs-0 mb-sm-4 mb-lg-0 col-md-4 col-lg-2">
                                         <h6 class="font-weight-bold">A project by</h6>
                                         <ul>
-                                                <li>Wade Andersen</li>
-                                                <li>Rosaria Maslowski</li>
-                                                <li>Larae Frizell</li>
-                                                <li>Angelica Luna</li>
-                                                <li>Detra Faires</li>
-                                                <li>Zoila Nebeker</li>
-                                                <li>Randall Wainwright</li>
+                                                <li>Nicola Brignoli</li>
+                                                <li>Francesca Brotto</li>
+                                                <li>Lea Mara Fabiano</li>
+                                                <li>Elena Filippi</li>
+                                                <li>Edoardo Guido</li>
+                                                <li>Jacopo Poletto</li>
                                         </ul>
                                 </div>
                                 <div class="col-xs-12 col-sm-6 offset-xs-0 col-md-4 col-lg-2">
