--- a/index.html
+++ b/index.html
@@ -2499,7 +2499,7 @@
                                 <?xml version="1.0" encoding="utf-8"?>
                                 <!-- Generator: Adobe Illustrator 22.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                        x="0px" y="0px" viewBox="600 150 600 800" style="enable-background:new 0 0 1920 1080;"
+                                        x="0px" y="0px" viewBox="600 150 700 850" style="enable-background:new 0 0 1920 1080;"
                                         xml:space="preserve">
                                         <g id="RunHS" class="higher">
                                                 <rect x="1527.9" y="357.5" class="encounter-blue-line" width="116.1"
@@ -3944,7 +3944,7 @@
                                         </div>
                                         <div class="graph-container" id="graph-scroller-timeline" style="position: relative;">
                                                 <span id="info-tooltip"></span>
-                                                <div style="position: relative; display: block;">
+                                                <div style="position: relative; display: block; margin-bottom: var(--spacing);">
                                                         <?xml version="1.0" encoding="utf-8"?>
                                                         <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -5510,7 +5510,7 @@
                         </div>
                         <div class="section-paragraph">
                                 <p>
-                                        <span class="highlighted"><a class="more-info" href="https://hatebase.org"
+                                        <span class="highlighted"><a class="more-info" data-definition="Hatebase was built to assist companies, government agencies, NGOs and research organizations moderate online conversations and potentially use hate speech as a predictor for regional violence." href="https://hatebase.org"
                                                         target="blank">Hatebase</a></span> is a tool that aims to map
                                         the way hatred spreads: the words it contains help people recognizing hate
                                         episodes both online and in real life. Moreover it gives a better understanding
