Commit for Github Pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <html>
 
+<!-- 
+________        .__      .__                                .___        
+\______ \_______|__|__  _|__| ______  _  _______ _______  __| _/        
+ |    |  \_  __ \  \  \/ /  |/    \ \/ \/ /\__  \\_  __ \/ __ |  ______ 
+ |    `   \  | \/  |\   /|  |   |  \     /  / __ \|  | \/ /_/ | /_____/ 
+/_______  /__|  |__| \_/ |__|___|  /\/\_/  (____  /__|  \____ |         
+        \/                       \/             \/           \/         
+.____                   __         .__                                  
+|    |    ____  _______/  |_______ |  |__ _____    ______ _____ _____   
+|    |   /  _ \/  ___/\   __\____ \|  |  \\__  \  /  ___//     \\__  \  
+|    |__(  <_> )___ \  |  | |  |_> >   Y  \/ __ \_\___ \|  Y Y  \/ __ \_
+|_______ \____/____  > |__| |   __/|___|  (____  /____  >__|_|  (____  /
+        \/         \/       |__|        \/     \/     \/      \/     \/ 
+ -->
+
 <head>
 
         <title>404 Hate not found</title>
@@ -5642,7 +5657,7 @@
         <!-- CDN Y U NO WORK -->
         <!--                 -->
         <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.9.3/countUp.min.js"></script> -->
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script>
+        <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/debug.addIndicators.min.js"></script> -->
 
         <!-- script custom -->
         <script type="text/javascript" src="src/main.js"></script>
